<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.matrix</groupId>
    <artifactId>gdmatrix-ws</artifactId>
    <version>3.0</version>
  </parent> 
  <artifactId>gdmatrix-ws-doc-ri</artifactId>
  <packaging>jar</packaging>
     
  <dependencies>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>gdmatrix-ws-dic-ri</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>gdmatrix-ws-common</artifactId>
      <version>${project.version}</version>
    </dependency>
    <!-- Droid -->
    <dependency>
      <groupId>uk.gov.nationalarchives</groupId>
      <artifactId>droid-container</artifactId>
      <version>6.5.2</version>              
    </dependency>   
	<dependency>
      <groupId>com.jcraft</groupId>
      <artifactId>jsch</artifactId>
      <version>0.1.55</version>
	</dependency>       
  </dependencies>
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <description>GDMatrix documents module web services reference implementation</description>
 
   
</project>